syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "vendor.proto";

//type_url: ec:s:event_info
message EventInfo {
    string title = 1;
    string description = 2;
    uint32 total = 4;
    repeated TicketHolder tickets = 5;
    google.protobuf.Timestamp start_time = 7;
    google.protobuf.Timestamp end_time = 8;
    uint32 ticket_price = 9;
    repeated string participants = 10;
    uint32 remaining = 11;
}

//type_url: eventInfo:t:eventInfo
//extend accountState
message ParticipantInfo {
    repeated string hosted = 1;
    repeated string participanted = 2;
    repeated string unused = 3;
    repeated string used = 4;
}

//type_url: ec:s:ticket_info
message TicketInfo {
    uint32 id = 3;
    string token = 4;
    bool is_used = 5;
}

message TicketHolder {
    Transaction ticket_create = 1;
    Transaction ticket_exchange = 2;
    bool executed = 3;
}
